--- a/style.css
+++ b/style.css
@@ -1,9 +1,132 @@
+                          
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
-    .open-sans{
-        font-family: "Open Sans", system-ui;/
-  
-      }
+  font-family: "Work Sans", sans-serif;
+  margin: 0px;
+  padding: 0px;
 }
+
+                      /* Universial Design  */
+
+main{
+  max-width: 1200px;
+  margin: auto;
+}    
+.section-title{
+   font-size: 2.5rem;
+   color: black;
+}
+.section-description{
+  font-size: .8rem;
+  color: gray;
+}
+.btn-primary{
+  font-size: 18px;
+  padding: 15px 18px;
+  color: white;
+  border: none;
+  background-color:#ff900e ;
+  border-radius: 5px;
+  /* margin-bottom: 30px; */
+  cursor: pointer;
+}
+header{
+  background-color:#fff4e7 ;
+  padding: 50px 200px;
+}
+
+                              /* Nav Section Design  */
+h3{
+  font-size: 36px;
+}                          
+nav{
+  /* width: 1140px; */
+  /* margin: auto; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* padding: 50px 0px; */
+}
+ul{
+  display: flex;
+  /* justify-content: space-between; */
+  /* margin-left:10px ; */
+}
+nav li{
+  list-style: none;
+}
+nav a{
+  text-decoration: none;
+  margin-left: 50px;
+  color: rgb(0, 0, 0);
+  /* list-style: none; */
+}
+
+                         /* Banner Section Design  */
+    
+.banner-content{
+  max-width: 800px;
+  text-align: center;
+  margin: auto;
+  padding-top: 50px;
+  
+}
+/* .banner{
+  width: 1200px ;
+  margin: auto;
+} */
+.banner-title{
+  font-size: 4rem;
+  margin-bottom: 30px;
+  
+}
+.banner-description{
+  font-size: 1rem;
+  color: gray;
+  margin-bottom: 30px;
+}
+.banner-img{
+  width: 100%;
+  padding: 30px 0px;
+}  
+
+
+                     /* BANNER SECTION RESPONSIVE FOR MOBILE */
+
+
+@media screen and (max-width:576px){
+
+  header{
+    padding: 20px;
+  }
+  nav{
+    flex-direction: column;
+  }
+  nav > ul{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .banner-title{
+    font-size: 24px;
+  }
+}
+
+/* Header responsive for Tablet */
+
+@media screen and (min-width:576px) and (max-width:960px){
+  header{
+    padding: 20px;
+  }
+  nav{
+    flex-direction: column;
+  }
+  
+}
+
+
+
