--- a/style.css
+++ b/style.css
@@ -123,12 +123,43 @@ nav a{
   .feature-span{
     color: #ff900e;
   }
+   
+            /* SECTION3 DESIGN  */
+  .section3{
+    padding: 50px 0px;
+  }
+  .card-container{
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0px;
+  }
+  .card{
+    text-align: center;
+    height: 150px;
+    width: 150px;
+    border: 1px solid #ff900e;
+    border-radius: 5px;
+    padding: 20px ;
+
+  }
+  .fact-title{
+     color: rgb(48, 46, 46);
+     font-size: 2rem;
+     font-weight: 400;
+  }
+  .fact-description{
+    color: gray;
+    font-size: 1rem;
+  }
+  .card img{
+    padding-top: 10px;
+  }
+  
 
 
 
 
-
-                     /* BANNER SECTION RESPONSIVE FOR MOBILE */
+                                          /*  RESPONSIVE FOR MOBILE */
 
 
 @media screen and (max-width:576px){
@@ -136,9 +167,11 @@ nav a{
   header{
     padding: 20px;
   }
-  nav , .section1-container{
+  nav , .section1-container, .card-container{
     flex-direction: column;
+    /* align-items: center; */
   }
+
   nav > ul{
     flex-direction: column;
     justify-content: center;
@@ -165,9 +198,25 @@ nav a{
 .section-title{
   font-size: 1.7rem;
 }
+.card{
+  margin-bottom: 10px;
+}
+.fact-content{
+  padding: 0px 30px;
+}
 }
 
-                        /* Header responsive for Tablet */
+                    /* fact section responsive  */
+.section3{
+  padding: 0px;
+}
+.card-container{
+  align-items: center;
+  gap: 5px;
+  padding: 30px 0px;
+}
+
+                                                           /*  RESPONSIVE FOR TABLET */
 
 @media screen and (min-width:576px) and (max-width:960px){
   header{
@@ -187,6 +236,11 @@ nav a{
   .team-content{
     width: 100%;
    }
+
+   /* section3 */
+   .section3{
+    padding: 50px;
+  }
   
 }
 
