--- a/style.css
+++ b/style.css
@@ -154,7 +154,33 @@ nav a{
   .card img{
     padding-top: 10px;
   }
+
+  /* SPONSOR SECTION */
   
+  .sponsor-img-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* padding: 50px; */
+  }
+  
+  .sponsor-content{
+    text-align: center;
+    max-width: 500px;
+    margin: auto;
+    padding-top: 50px;
+  }
+  .sponsor-img-container {
+    padding-bottom: 50px;
+  }
+
+  footer{
+    background-color: antiquewhite;
+    margin: 100px 0px;
+    padding: 50px;
+    text-align: center;
+    border-radius: 5px;
+  }
 
 
 
@@ -167,7 +193,10 @@ nav a{
   header{
     padding: 20px;
   }
-  nav , .section1-container, .card-container{
+  nav , 
+  .section1-container,
+   .card-container,
+   .sponsor-img-container{
     flex-direction: column;
     /* align-items: center; */
   }
@@ -205,8 +234,7 @@ nav a{
   padding: 0px 30px;
 }
 }
-
-                    /* fact section responsive  */
+ /* fact section responsive  */
 .section3{
   padding: 0px;
 }
@@ -214,6 +242,20 @@ nav a{
   align-items: center;
   gap: 5px;
   padding: 30px 0px;
+}
+.sponsor-img-container img{
+  padding: 15px 0px;
+}
+/* sponsor section */
+/* .sponsor-section img{
+  max-width: 50%;
+  padding-left: 80px;
+  margin-bottom: 10px;
+} */
+
+footer{
+  margin: 30px;
+  padding: 30px;
 }
 
                                                            /*  RESPONSIVE FOR TABLET */
@@ -241,6 +283,16 @@ nav a{
    .section3{
     padding: 50px;
   }
+  .sponsor-img-container{
+    flex-wrap: wrap;
+    gap: 15px;
+    margin-right: 30px;
+    padding: 0px 30px;
+  }
+  .sponsor-section img{
+   
+  
+}
   
 }
 
